# token-Lottery-program

./: Anchor.toml  package-lock.json  package.json  tsconfig.json
programs/raffle/: Cargo.toml
programs/raffle/src/: lib.rs
programs/token-lottery/: Cargo.toml
programs/token-lottery/src/: constants.rs  error.rs  lib.rs
programs/token-lottery/src/instructions/: buy_ticket.rs  choose_winner.rs  claim_winnings.rs  commit_randomness.rs  commit_winner.rs  initialize_config.rs  initialize_lottery.rs  mod.rs
programs/token-lottery/src/state/: mod.rs  token_lottery.rs
setup/: randomness_queue.json
tests/: ondemand-idl.json  raffle.ts  token-lottery.spec.ts
